# carbon-lang

./: .bazelignore  .bazelrc  .clang-tidy  .clangd  .gdbinit  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE
.devcontainer/: devcontainer.json
.github/workflows/: auto_assign_prs.yaml  auto_label_prs.yaml  clang_tidy.yaml  nightly_release.yaml  pre_commit.yaml  triage_inactive.yaml
bazel/carbon_rules/: BUILD  defs.bzl
bazel/cc_toolchains/: BUILD  clang_cc_toolchain_config.bzl  clang_configuration.bzl  clang_toolchain.BUILD  defs.bzl
bazel/check_deps/: BUILD  check_non_test_cc_deps.py
bazel/llvm_project/: 0001_Patch_for_mallinfo2_when_using_Bazel_build_system.patch  0003_Comment_out_unloaded_proto_library_dependencies.patch
bazel/manifest/: defs.bzl
bazel/version/: BUILD
common/: BUILD  array_stack.h  check.h  check_internal.cpp  check_internal.h  check_test.cpp  command_line.cpp  command_line.h  command_line_test.cpp  enum_base_test.cpp  enum_base_test.def  error.h  error_test.cpp  error_test_helpers.h  hashing.h  hashing_benchmark.cpp  hashing_test.cpp  hashtable_key_context.h  indirect_value_test.cpp  map.h  map_test.cpp  ostream.h  raw_hashtable.h  raw_hashtable_benchmark_helpers.cpp  raw_hashtable_metadata_group.h  raw_hashtable_metadata_group_benchmark.cpp  raw_hashtable_test_helpers.h  raw_string_ostream.h  raw_string_ostream_test.cpp  set.h  set_test.cpp  vlog_test.cpp
core/: BUILD  io.carbon
core/prelude/: types.carbon
docker/: README.md
docker/ubuntu2404/: Dockerfile
docs/design/: classes.md  pattern_matching.md  values.md
docs/project/: code_review.md  contribution_tools.md  cpp_style_guide.md  faq.md  milestones.md  pull_request_workflow.md  roadmap.md
examples/: sieve.carbon
examples/advent2024/: BUILD  README.md  day10_common.carbon  day10_part1.carbon  day10_part2.carbon  day11_common.carbon  day11_part1.carbon  day11_part2.carbon  day12_common.carbon  day12_part1.carbon  day12_part2.carbon  day13_common.carbon  day13_part1.carbon  day13_part2.carbon  day1_common.carbon  day1_part1.carbon  day1_part2.carbon  day2_common.carbon  day2_part1.carbon  day2_part2.carbon  day3_common.carbon  day3_part1.carbon  day3_part2.carbon  day4_common.carbon  day4_part1.carbon  day4_part2.carbon  day5_common.carbon  day5_part1.carbon  day5_part2.carbon  day6_common.carbon  day6_part1.carbon  day6_part2.carbon  day7_common.carbon  day7_part1.carbon  day7_part2.carbon  day8_common.carbon  day8_part1.carbon  day8_part2.carbon  day9_common.carbon  day9_part1.carbon  (+3 more)
explorer/: BUILD  README.md  file_test.cpp
explorer/ast/: element.cpp
explorer/base/: BUILD  error_builders_test.cpp
explorer/interpreter/: pattern_analysis.cpp  type_checker.cpp  type_utils.h
explorer/parse_and_execute/: BUILD
explorer/syntax/: BUILD
github_tools/: BUILD
migrate_cpp/: rewriter.cpp
migrate_cpp/cpp_refactoring/: fn_inserter.cpp  for_range.cpp  matcher_test_base.h  var_decl.cpp
proposals/: p0107.md  p0144.md  p0162.md  p0253.md  p0257.md  p0285.md  p0339.md  p0340.md  p0353.md  p1083.md  p1178.md  p2006.md  p2022.md  p2188.md  p2550.md  p3564.md  p3720.md  p3833.md  p4682.md  p4864.md  p4880.md
proposals/scripts/: new_proposal.py
scripts/: create_compdb.py  fix_cc_deps.py  forbid_llvm_googletest.py  run_clang_tidy.py  scripts_utils.py
testing/base/: BUILD  capture_std_streams.cpp  capture_std_streams.h  file_helpers.cpp  file_helpers.h  source_gen.cpp  source_gen.h  source_gen_main.cpp  source_gen_test.cpp
testing/file_test/: BUILD  README.md  autoupdate.cpp  autoupdate.h  autoupdate_testdata.sh  file_test_base.cpp  file_test_base.h  file_test_base_test.cpp  file_test_manifest.cpp  line.h  manifest.cpp  manifest.h  rules.bzl  run_test.cpp  run_test.h  test_file.cpp  test_file.h
testing/fuzzing/: BUILD  libfuzzer.h  proto_to_carbon.cpp
toolchain/: BUILD  autoupdate_testdata.py  run_tool.bzl
toolchain/base/: BUILD  index_base.h  int.cpp  int.h  int_store.cpp  int_store.h  int_store_test.cpp  int_test.cpp  llvm_tools.bzl  llvm_tools.cpp  llvm_tools.h  mem_usage.h  pretty_stack_trace_function.h  shared_value_stores.h  shared_value_stores_test.cpp  timings.h  value_ids.h  value_store.h  value_store_test.cpp  yaml.h
toolchain/check/: BUILD  call.cpp  check.cpp  check.h  check_fuzzer.cpp  check_unit.cpp  check_unit.h  context.cpp  context.h  control_flow.cpp  control_flow.h  convert.cpp  convert.h  decl_introducer_state.h  decl_name_stack.cpp  decl_name_stack.h  deduce.cpp  deduce.h  deferred_definition_worklist.cpp  deferred_definition_worklist.h  diagnostic_helpers.h  dump.cpp  eval.cpp  eval.h  eval_inst.cpp  eval_inst.h  facet_type.cpp  facet_type.h  full_pattern_stack.h  function.cpp  function.h  generic.cpp  generic.h  generic_region_stack.h  global_init.cpp  handle_alias.cpp  handle_array.cpp  handle_binding_pattern.cpp  handle_call_expr.cpp  handle_choice.cpp  (+78 more)
toolchain/codegen/: codegen.cpp
toolchain/diagnostics/: BUILD  check_diagnostics.py  coverage_test.cpp  diagnostic.cpp  diagnostic.h  diagnostic_consumer.cpp  diagnostic_consumer.h  diagnostic_converter.h  diagnostic_emitter.h  diagnostic_emitter_test.cpp  diagnostic_kind.def  file_diagnostics.h  mocks.cpp  mocks.h  null_diagnostics.h  sorting_diagnostic_consumer.h  sorting_diagnostic_consumer_test.cpp
toolchain/docs/: README.md  adding_features.md  check.md  diagnostics.md  idioms.md  parse.md
toolchain/driver/: BUILD  clang_runner.cpp  clang_runner.h  clang_runner_test.cpp  clang_subcommand.cpp  clang_subcommand.h  codegen_options.cpp  compile_benchmark.cpp  compile_subcommand.cpp  compile_subcommand.h  driver.cpp  driver.h  driver_env.h  driver_fuzzer.cpp  driver_subcommand.cpp  driver_subcommand.h  driver_test.cpp  format_subcommand.cpp  format_subcommand.h  language_server_subcommand.cpp  language_server_subcommand.h  link_subcommand.cpp  link_subcommand.h  lld_runner.cpp  lld_runner.h  lld_runner_test.cpp  lld_subcommand.cpp  lld_subcommand.h  llvm_runner.cpp  (+6 more)
utils/: README.md
website/: _config.yml  prebuild.py
(+1374 files in other folders)
